added rent form

--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap bg">
     <app-car class="mx-3 my-3"></app-car>
     <app-car class="mx-3 my-3"></app-car>
     <app-car class="mx-3 my-3"></app-car>
