--- a/src/app/car-list/car/car.component.html
+++ b/src/app/car-list/car/car.component.html
@@ -1,8 +1,9 @@
 <div class="card" style="width: 20rem;">
-    <img class="card-img-top" src="https://drop.ndtv.com/albums/AUTO/porsche-taycan-turbo/1200x900_1.jpg" alt="Card image cap">
+    <img class="card-img-top car" [src]="car.imagePath" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a routerLink="/rent" class="btn btn-primary">Go somewhere</a>
+      <h5 class="card-title">{{car.carModelName}}</h5>
+      <p class="card-text">{{car.description}}</p>
+      <p class="card-text">Disponibles: {{car.available}}</p>
+      <a (click)="onAlquilar()" class="btn btn-primary">Alquilar</a>
     </div>
   </div>
