--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,11 +1,9 @@
-<div class="d-flex flex-wrap bg">
-    <app-car class="mx-3 my-3"></app-car>
-    <app-car class="mx-3 my-3"></app-car>
-    <app-car class="mx-3 my-3"></app-car>
-    <app-car class="mx-3 my-3"></app-car>
-    <app-car class="mx-3 my-3"></app-car>
-    <app-car class="mx-3 my-3"></app-car>
-    <app-car class="mx-3 my-3"></app-car>
+<div class="d-flex flex-wrap bg"> 
+    <app-car 
+        class="mx-3 my-3" 
+        *ngFor="let car of cars | async"
+        [car]="car"
+    ></app-car>
 </div>
 
 
