--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,1 +1,16 @@
-<p>history works!</p>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Carro</th>
+        <th scope="col">Fecha Recibido</th>
+        <th scope="col">Fecha Entrega</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let cars of myCars$ | async">
+        <td>{{cars.value.vehiculo}}</td>
+        <td>{{cars.value.fechaRecibo}}</td>
+        <td>{{cars.value.fechaEntrega}}</td>
+      </tr>
+    </tbody>
+  </table>
