--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-3 col-md-offset-3">
+            <p class="divider-text">
+                <span class="bg-white" style="font-size: 150%; font-weight: 500; color: black;">Sign In</span>
+            </p>
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label for="correo">Correo</label>
@@ -24,6 +27,10 @@
                 </span>
                 <p></p>
                 <button class="btn btn-primary" [disabled]="!loginForm.valid" type="submit" >Iniciar Sesión</button>
+                <p class="center">
+                    <span class="message" style="color: black;">¿No tienes una cuenta? </span>
+                    <a class="pointer" routerLink="/register">Registrate!</a>
+                  </p>
             </form>
         </div>
     </div>
