--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+            <p class="divider-text">
+                <span class="bg-white" style="font-size: 150%; font-weight: 500; color: black;">Crear Usuario</span>
+            </p>
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
